fix filter
